# Fdf

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
includes/: fdf.h
libft/: ft_strsplit.c  get_next_line.c  get_next_line.h  libft.h
sources/: deal_key.c  draw.c  draw_line.c  error_handler.c  fdf.c  isometric.c  math.c  read_file.c  read_functions.c  shift.c  shift_z.c  window.c  zoom.c
